# opencv_playground

./: .gitignore  CMakeLists.txt  README.md
basic/: CMakeLists.txt  main.cpp
